--- a/css-global/style-login.css
+++ b/css-global/style-login.css
@@ -77,7 +77,7 @@ header {
 .btn-acessa {
   color: #fff;
   background-color: #EFAB01;
-  border-radius: 8px;
+  border-radius: 8px 0 0 8px;
   /* padding: 15px 20px; */
 
   display: flex;
@@ -131,6 +131,12 @@ header {
 
 
 @media (max-width: 375px) {
+  .btn-acessa {
+    color: #fff;
+    background-color: #EFAB01;
+    border-radius: 8px 0 0 8px;
+  }
+  
   .cadastra {
     text-decoration: none !important;
     color: #fff;
