correções da bordar button - visto por Jose(1)

--- a/css-global/style-login.css
+++ b/css-global/style-login.css
@@ -134,9 +134,9 @@ header {
   .btn-acessa {
     color: #fff;
     background-color: #EFAB01;
-    border-radius: 8px 0 0 8px;
+    border-radius: 8px 0px 0px 8px;;
   }
-  
+
   .cadastra {
     text-decoration: none !important;
     color: #fff;
