--- a/css-global/style-login.css
+++ b/css-global/style-login.css
@@ -77,7 +77,7 @@ header {
 .btn-acessa {
   color: #fff;
   background-color: #EFAB01;
-  border-radius: 8px 0 0 8px;
+  border-radius: 8px;
   /* padding: 15px 20px; */
 
   display: flex;
@@ -131,6 +131,11 @@ header {
 
 
 @media (max-width: 375px) {
+  .btn-img {
+    background-color: #E0A001;
+    border-radius: 8px 0px 8px 8px !important;
+  }
+  
   .btn-acessa {
     color: #fff;
     background-color: #EFAB01;
